swift-jdbc-parser/src/main/java/com/fr/swift/jdbc/antlr4/SwiftSqlParser.java
// Generated from D:\workspace\swift-public/target/classes/SwiftSqlParser.g4 by ANTLR 4.5.3
package com.fr.swift.jdbc.antlr4;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SwiftSqlParser extends Parser {
    public static final int
            SELECT = 1, DISTINCT = 2, AS = 3, FROM = 4, WHERE = 5, GROUP = 6, BY = 7, HAVING = 8,
            ORDER = 9, ASC = 10, DESC = 11, LIMIT = 12, INSERT = 13, INTO = 14, VALUES = 15, DELETE = 16,
            TRUNCATE = 17, CREATE = 18, TABLE = 19, NULL = 20, PARTITION = 21, BIT = 22, TINYINT = 23,
            SMALLINT = 24, INTEGER = 25, BIGINT = 26, FLOAT = 27, REAL = 28, DOUBLE = 29, NUMERIC = 30,
            DECIMAL = 31, CHAR = 32, VARCHAR = 33, LONGVARCHAR = 34, DATE = 35, TIME = 36, TIMESTAMP = 37,
            BOOLEAN = 38, DROP = 39, ALTER = 40, ADD = 41, COLUMN = 42, MAX = 43, MIN = 44, SUM = 45,
            AVG = 46, COUNT = 47, MID = 48, TODATE = 49, NOT = 50, IN = 51, BETWEEN = 52, AND = 53,
            OR = 54, LIKE = 55, IS = 56, LINE = 57, HASH = 58, RANGE = 59, MUL = 60, DIV = 61, MOD = 62,
            PLUS = 63, MINUS = 64, EQ = 65, GREATER = 66, LESS = 67, GEQ = 68, LEQ = 69, NEQ = 70,
            EXCLAMATION = 71, BIT_NOT = 72, BIT_OR = 73, BIT_AND = 74, BIT_XOR = 75, DOT = 76,
            L_PAR = 77, R_PAR = 78, COMMA = 79, SEMI = 80, AT = 81, SINGLE_QUOTE = 82, DOUBLE_QUOTE = 83,
            REVERSE_QUOTE = 84, COLON = 85, IDENTIFIER = 86, NUMERIC_LITERAL = 87, STRING_LITERAL = 88,
            DIGIT = 89, WS = 90;
    public static final int
            RULE_root = 0, RULE_sqls = 1, RULE_sql = 2, RULE_ddl = 3, RULE_dml = 4,
            RULE_createTable = 5, RULE_columnDefinitions = 6, RULE_columnDefinition = 7,
            RULE_dataType = 8, RULE_dropTable = 9, RULE_alterTable = 10, RULE_alterTableAddColumn = 11,
            RULE_alterTableDropColumn = 12, RULE_insert = 13, RULE_delete = 14, RULE_truncate = 15,
            RULE_select = 16, RULE_columns = 17, RULE_orderBy = 18, RULE_expr = 19,
            RULE_simpleExpr = 20, RULE_funcExpr = 21, RULE_funcName = 22, RULE_keywordBoolExpr = 23,
            RULE_boolExpr = 24, RULE_op = 25, RULE_boolOp = 26, RULE_logicOp = 27,
            RULE_name = 28, RULE_names = 29, RULE_value = 30, RULE_values = 31;
    public static final String[] ruleNames = {
            "root", "sqls", "sql", "ddl", "dml", "createTable", "columnDefinitions",
            "columnDefinition", "dataType", "dropTable", "alterTable", "alterTableAddColumn",
            "alterTableDropColumn", "insert", "delete", "truncate", "select", "columns",
            "orderBy", "expr", "simpleExpr", "funcExpr", "funcName", "keywordBoolExpr",
            "boolExpr", "op", "boolOp", "logicOp", "name", "names", "value", "values"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            "'*'", "'/'", "'%'", "'+'", "'-'", "'='", "'>'", "'<'", "'>='", "'<='",
            "'!='", "'!'", "'~'", "'|'", "'&'", "'^'", "'.'", "'('", "')'", "','",
            "';'", "'@'", "'''", "'\"'", "'`'", "':'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "SELECT", "DISTINCT", "AS", "FROM", "WHERE", "GROUP", "BY", "HAVING",
            "ORDER", "ASC", "DESC", "LIMIT", "INSERT", "INTO", "VALUES", "DELETE",
            "TRUNCATE", "CREATE", "TABLE", "NULL", "PARTITION", "BIT", "TINYINT",
            "SMALLINT", "INTEGER", "BIGINT", "FLOAT", "REAL", "DOUBLE", "NUMERIC",
            "DECIMAL", "CHAR", "VARCHAR", "LONGVARCHAR", "DATE", "TIME", "TIMESTAMP",
            "BOOLEAN", "DROP", "ALTER", "ADD", "COLUMN", "MAX", "MIN", "SUM", "AVG",
            "COUNT", "MID", "TODATE", "NOT", "IN", "BETWEEN", "AND", "OR", "LIKE",
            "IS", "LINE", "HASH", "RANGE", "MUL", "DIV", "MOD", "PLUS", "MINUS", "EQ",
            "GREATER", "LESS", "GEQ", "LEQ", "NEQ", "EXCLAMATION", "BIT_NOT", "BIT_OR",
            "BIT_AND", "BIT_XOR", "DOT", "L_PAR", "R_PAR", "COMMA", "SEMI", "AT",
            "SINGLE_QUOTE", "DOUBLE_QUOTE", "REVERSE_QUOTE", "COLON", "IDENTIFIER",
            "NUMERIC_LITERAL", "STRING_LITERAL", "DIGIT", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public SwiftSqlParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SwiftSqlParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final RootContext root() throws RecognitionException {
        RootContext _localctx = new RootContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_root);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                sqls();
                setState(65);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SqlsContext sqls() throws RecognitionException {
        SqlsContext _localctx = new SqlsContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_sqls);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(67);
                sql();
                setState(72);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 1 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1 + 1) {
                        {
                            {
                                setState(68);
                                match(SEMI);
                                setState(69);
                                sql();
                            }
                        }
                    }
                    setState(74);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
                setState(76);
                _la = _input.LA(1);
                if (_la == SEMI) {
                    {
                        setState(75);
                        match(SEMI);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SqlContext sql() throws RecognitionException {
        SqlContext _localctx = new SqlContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_sql);
        try {
            setState(80);
            switch (_input.LA(1)) {
                case CREATE:
                case DROP:
                case ALTER:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(78);
                    ddl();
                }
                break;
                case SELECT:
                case INSERT:
                case DELETE:
                case TRUNCATE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(79);
                    dml();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DdlContext ddl() throws RecognitionException {
        DdlContext _localctx = new DdlContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_ddl);
        try {
            setState(85);
            switch (_input.LA(1)) {
                case CREATE:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(82);
                    createTable();
                }
                break;
                case DROP:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(83);
                    dropTable();
                }
                break;
                case ALTER:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(84);
                    alterTable();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DmlContext dml() throws RecognitionException {
        DmlContext _localctx = new DmlContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_dml);
        try {
            setState(91);
            switch (_input.LA(1)) {
                case INSERT:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(87);
                    insert();
                }
                break;
                case DELETE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(88);
                    delete();
                }
                break;
                case SELECT:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(89);
                    select();
                }
                break;
                case TRUNCATE:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(90);
                    truncate();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CreateTableContext createTable() throws RecognitionException {
        CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_createTable);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(93);
                match(CREATE);
                setState(94);
                match(TABLE);
                setState(95);
                ((CreateTableContext) _localctx).table = name();
                setState(96);
                match(L_PAR);
                setState(97);
                columnDefinitions();
                setState(98);
                match(R_PAR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ColumnDefinitionsContext columnDefinitions() throws RecognitionException {
        ColumnDefinitionsContext _localctx = new ColumnDefinitionsContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_columnDefinitions);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                name();
                setState(101);
                columnDefinition();
                setState(108);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(102);
                            match(COMMA);
                            setState(103);
                            name();
                            setState(104);
                            columnDefinition();
                        }
                    }
                    setState(110);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ColumnDefinitionContext columnDefinition() throws RecognitionException {
        ColumnDefinitionContext _localctx = new ColumnDefinitionContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_columnDefinition);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(111);
                dataType();
                setState(115);
                _la = _input.LA(1);
                if (_la == L_PAR) {
                    {
                        setState(112);
                        match(L_PAR);
                        setState(113);
                        ((ColumnDefinitionContext) _localctx).length = match(NUMERIC_LITERAL);
                        setState(114);
                        match(R_PAR);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DataTypeContext dataType() throws RecognitionException {
        DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_dataType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(117);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BIT) | (1L << TINYINT) | (1L << SMALLINT) | (1L << INTEGER) | (1L << BIGINT) | (1L << FLOAT) | (1L << REAL) | (1L << DOUBLE) | (1L << NUMERIC) | (1L << DECIMAL) | (1L << CHAR) | (1L << VARCHAR) | (1L << LONGVARCHAR) | (1L << DATE) | (1L << TIME) | (1L << TIMESTAMP) | (1L << BOOLEAN))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DropTableContext dropTable() throws RecognitionException {
        DropTableContext _localctx = new DropTableContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_dropTable);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(119);
                match(DROP);
                setState(120);
                match(TABLE);
                setState(121);
                ((DropTableContext) _localctx).table = name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AlterTableContext alterTable() throws RecognitionException {
        AlterTableContext _localctx = new AlterTableContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_alterTable);
        try {
            setState(125);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(123);
                    alterTableAddColumn();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(124);
                    alterTableDropColumn();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AlterTableAddColumnContext alterTableAddColumn() throws RecognitionException {
        AlterTableAddColumnContext _localctx = new AlterTableAddColumnContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_alterTableAddColumn);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(127);
                match(ALTER);
                setState(128);
                match(TABLE);
                setState(129);
                ((AlterTableAddColumnContext) _localctx).table = name();
                setState(130);
                match(ADD);
                setState(131);
                columnDefinitions();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AlterTableDropColumnContext alterTableDropColumn() throws RecognitionException {
        AlterTableDropColumnContext _localctx = new AlterTableDropColumnContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_alterTableDropColumn);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(133);
                match(ALTER);
                setState(134);
                match(TABLE);
                setState(135);
                ((AlterTableDropColumnContext) _localctx).table = name();
                setState(136);
                match(DROP);
                setState(137);
                ((AlterTableDropColumnContext) _localctx).columnNames = names();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final InsertContext insert() throws RecognitionException {
        InsertContext _localctx = new InsertContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_insert);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(139);
                match(INSERT);
                setState(140);
                match(INTO);
                setState(141);
                ((InsertContext) _localctx).table = name();
                setState(146);
                _la = _input.LA(1);
                if (_la == L_PAR) {
                    {
                        setState(142);
                        match(L_PAR);
                        setState(143);
                        ((InsertContext) _localctx).columnNames = names();
                        setState(144);
                        match(R_PAR);
                    }
                }

                setState(148);
                match(VALUES);
                setState(149);
                match(L_PAR);
                setState(150);
                values();
                setState(151);
                match(R_PAR);
                setState(159);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                while (_alt != 1 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1 + 1) {
                        {
                            {
                                setState(152);
                                match(COMMA);
                                setState(153);
                                match(L_PAR);
                                setState(154);
                                values();
                                setState(155);
                                match(R_PAR);
                            }
                        }
                    }
                    setState(161);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DeleteContext delete() throws RecognitionException {
        DeleteContext _localctx = new DeleteContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_delete);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(162);
                match(DELETE);
                setState(163);
                match(FROM);
                setState(164);
                ((DeleteContext) _localctx).table = name();
                setState(165);
                match(WHERE);
                setState(166);
                ((DeleteContext) _localctx).where = expr(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TruncateContext truncate() throws RecognitionException {
        TruncateContext _localctx = new TruncateContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_truncate);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(168);
                match(TRUNCATE);
                setState(169);
                ((TruncateContext) _localctx).table = name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SelectContext select() throws RecognitionException {
        SelectContext _localctx = new SelectContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_select);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(171);
                match(SELECT);
                setState(173);
                _la = _input.LA(1);
                if (_la == DISTINCT) {
                    {
                        setState(172);
                        match(DISTINCT);
                    }
                }

                setState(175);
                columns();
                setState(176);
                match(FROM);
                setState(182);
                switch (_input.LA(1)) {
                    case IDENTIFIER: {
                        setState(177);
                        ((SelectContext) _localctx).table = name();
                    }
                    break;
                    case L_PAR: {
                        setState(178);
                        match(L_PAR);
                        setState(179);
                        ((SelectContext) _localctx).subQuery = select();
                        setState(180);
                        match(R_PAR);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(188);
                _la = _input.LA(1);
                if (_la == AS || _la == IDENTIFIER) {
                    {
                        setState(185);
                        _la = _input.LA(1);
                        if (_la == AS) {
                            {
                                setState(184);
                                match(AS);
                            }
                        }

                        setState(187);
                        ((SelectContext) _localctx).alias = name();
                    }
                }

                setState(192);
                _la = _input.LA(1);
                if (_la == WHERE) {
                    {
                        setState(190);
                        match(WHERE);
                        setState(191);
                        ((SelectContext) _localctx).where = expr(0);
                    }
                }

                setState(197);
                _la = _input.LA(1);
                if (_la == GROUP) {
                    {
                        setState(194);
                        match(GROUP);
                        setState(195);
                        match(BY);
                        setState(196);
                        ((SelectContext) _localctx).groupBy = names();
                    }
                }

                setState(201);
                _la = _input.LA(1);
                if (_la == HAVING) {
                    {
                        setState(199);
                        match(HAVING);
                        setState(200);
                        ((SelectContext) _localctx).having = expr(0);
                    }
                }

                setState(206);
                _la = _input.LA(1);
                if (_la == ORDER) {
                    {
                        setState(203);
                        match(ORDER);
                        setState(204);
                        match(BY);
                        setState(205);
                        orderBy();
                    }
                }

                setState(210);
                _la = _input.LA(1);
                if (_la == LIMIT) {
                    {
                        setState(208);
                        match(LIMIT);
                        setState(209);
                        ((SelectContext) _localctx).limit = match(NUMERIC_LITERAL);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ColumnsContext columns() throws RecognitionException {
        ColumnsContext _localctx = new ColumnsContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_columns);
        int _la;
        try {
            int _alt;
            setState(233);
            switch (_input.LA(1)) {
                case MUL:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(212);
                    match(MUL);
                }
                break;
                case NULL:
                case MAX:
                case MIN:
                case SUM:
                case AVG:
                case COUNT:
                case MID:
                case TODATE:
                case IDENTIFIER:
                case NUMERIC_LITERAL:
                case STRING_LITERAL:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(213);
                    simpleExpr();
                    setState(218);
                    _la = _input.LA(1);
                    if (_la == AS || _la == IDENTIFIER) {
                        {
                            setState(215);
                            _la = _input.LA(1);
                            if (_la == AS) {
                                {
                                    setState(214);
                                    match(AS);
                                }
                            }

                            setState(217);
                            ((ColumnsContext) _localctx).alias = name();
                        }
                    }

                    setState(230);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 23, _ctx);
                    while (_alt != 1 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                        if (_alt == 1 + 1) {
                            {
                                {
                                    setState(220);
                                    match(COMMA);
                                    setState(221);
                                    simpleExpr();
                                    setState(226);
                                    _la = _input.LA(1);
                                    if (_la == AS || _la == IDENTIFIER) {
                                        {
                                            setState(223);
                                            _la = _input.LA(1);
                                            if (_la == AS) {
                                                {
                                                    setState(222);
                                                    match(AS);
                                                }
                                            }

                                            setState(225);
                                            ((ColumnsContext) _localctx).alias = name();
                                        }
                                    }

                                }
                            }
                        }
                        setState(232);
                        _errHandler.sync(this);
                        _alt = getInterpreter().adaptivePredict(_input, 23, _ctx);
                    }
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final OrderByContext orderBy() throws RecognitionException {
        OrderByContext _localctx = new OrderByContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_orderBy);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(235);
                name();
                setState(237);
                _la = _input.LA(1);
                if (_la == ASC || _la == DESC) {
                    {
                        setState(236);
                        _la = _input.LA(1);
                        if (!(_la == ASC || _la == DESC)) {
                            _errHandler.recoverInline(this);
                        } else {
                            consume();
                        }
                    }
                }

                setState(246);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 27, _ctx);
                while (_alt != 1 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1 + 1) {
                        {
                            {
                                setState(239);
                                match(COMMA);
                                setState(240);
                                name();
                                setState(242);
                                _la = _input.LA(1);
                                if (_la == ASC || _la == DESC) {
                                    {
                                        setState(241);
                                        _la = _input.LA(1);
                                        if (!(_la == ASC || _la == DESC)) {
                                            _errHandler.recoverInline(this);
                                        } else {
                                            consume();
                                        }
                                    }
                                }

                            }
                        }
                    }
                    setState(248);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 27, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExprContext expr() throws RecognitionException {
        return expr(0);
    }
